--- a/login/index.html
+++ b/login/index.html
@@ -7,16 +7,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Connecter-vous - INC</title>
   <!-- plugins:css -->
-  <link rel="stylesheet" href="../../vendors/feather/feather.css">
+  <!-- <link rel="stylesheet" href="../../vendors/feather/feather.css">
   <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
+  <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css"> -->
   <!-- endinject -->
   <!-- Plugin css for this page -->
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="assets\css\style.css">
+  <link rel="stylesheet" href="..\assets\css\style.css">
   <!-- endinject -->
-  <link rel="shortcut icon" href="assets/img/favicon.png" />
+  <link rel="shortcut icon" href="../assets/img/favicon.png" />
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+
+    <script src="index.js"></script>
 </head>
 
 <body>
@@ -26,14 +31,14 @@
         <div class="row w-100 mx-0">
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-              
+
               <div class="text-center mt-4 font-weight-light">
                 <div class="brand-logo">
-                  <img src="assets/img/inc-logo.png" alt="logo">
+                  <img src="../assets/img/inc-logo.png" alt="logo">
                 </div>
                 </div>
-              
-              <div class="text-center mt-4 font-weight-light"> 
+
+              <div class="text-center mt-4 font-weight-light">
               <h6 class="font-weight-medium">Connecter-vous ! </h6>
               </div>
 
@@ -45,7 +50,7 @@
                   <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
                 </div>
                 <div class="mt-3">
-                  <a class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn" href="dashboard.html">Se Connecter</a>
+                  <a class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn" id="lgnBtn">Se Connecter</a>
                 </div>
               </form>
             </div>
@@ -58,16 +63,19 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <script src="../../vendors/js/vendor.bundle.base.js"></script>
+  <!-- <script src="../../vendors/js/vendor.bundle.base.js"></script> -->
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <!-- End plugin js for this page -->
   <!-- inject:js -->
-  <script src="../../js/off-canvas.js"></script>
+  <!-- <script src="../../js/off-canvas.js"></script>
   <script src="../../js/hoverable-collapse.js"></script>
   <script src="../../js/template.js"></script>
   <script src="../../js/settings.js"></script>
-  <script src="../../js/todolist.js"></script>
+  <script src="../../js/todolist.js"></script> -->
+
+
+
   <!-- endinject -->
 </body>
 
