--- a/new/login.html
+++ b/new/login.html
@@ -7,27 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Connecter-vous - INC</title>
   <!-- plugins:css -->
-  <!-- <link rel="stylesheet" href="../../vendors/feather/feather.css">
+  <link rel="stylesheet" href="../../vendors/feather/feather.css">
   <link rel="stylesheet" href="../../vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css"> -->
+  <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
   <!-- endinject -->
   <!-- Plugin css for this page -->
   <!-- End plugin css for this page -->
   <!-- inject:css -->
-  <link rel="stylesheet" type="text/css" href="..\assets\css\style.css">
+  <link rel="stylesheet" href="assets\css\style.css">
   <!-- endinject -->
-  <link rel="shortcut icon" href="../assets/img/favicon.png" />
-
-  <!-- Animation library for notifications   -->
-  <link href="../assets/css/animate.min.css" rel="stylesheet"/>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-
-  <script src="../assets/js/notif.js"></script>
-    <link rel="stylesheet" href="../assets/css/notif.css">
-
-    <script src="index.js"></script>
+  <link rel="shortcut icon" href="assets/img/favicon.png" />
 </head>
 
 <body>
@@ -37,26 +26,26 @@
         <div class="row w-100 mx-0">
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-
+              
               <div class="text-center mt-4 font-weight-light">
                 <div class="brand-logo">
-                  <img src="../assets/img/inc-logo.png" alt="logo">
+                  <img src="assets/img/inc-logo.png" alt="logo">
                 </div>
                 </div>
-
-              <div class="text-center mt-4 font-weight-light">
+              
+              <div class="text-center mt-4 font-weight-light"> 
               <h6 class="font-weight-medium">Connecter-vous ! </h6>
               </div>
 
               <form class="pt-3">
                 <div class="form-group">
-                  <input type="text" class="form-control form-control-lg" id="username" placeholder="Username">
+                  <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">
                 </div>
                 <div class="form-group">
-                  <input type="password" class="form-control form-control-lg" id="password" placeholder="Password">
+                  <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
                 </div>
                 <div class="mt-3">
-                  <a class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn" id="TG9naW5CdXR0b24">Se Connecter</a>
+                  <a class="btn btn-block btn-info btn-lg font-weight-medium auth-form-btn" href="dashboard.html">Se Connecter</a>
                 </div>
               </form>
             </div>
@@ -69,22 +58,16 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <!-- <script src="../../vendors/js/vendor.bundle.base.js"></script> -->
+  <script src="../../vendors/js/vendor.bundle.base.js"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <!-- End plugin js for this page -->
   <!-- inject:js -->
-  <!-- <script src="../../js/off-canvas.js"></script>
+  <script src="../../js/off-canvas.js"></script>
   <script src="../../js/hoverable-collapse.js"></script>
   <script src="../../js/template.js"></script>
   <script src="../../js/settings.js"></script>
-  <script src="../../js/todolist.js"></script> -->
-  <!-- <script src="../assets/js/main.js"></script> -->
-
-  <!--  Notifications Plugin    -->
-  <script src="../assets/js/bootstrap-notify.js"></script>
-
-
+  <script src="../../js/todolist.js"></script>
   <!-- endinject -->
 </body>
 
