--- a/new/index.html
+++ b/new/index.html
@@ -34,77 +34,97 @@
 </head>
 <body>
 
+	<style media="screen">
+		.linkBtn{
+			cursor:pointer;
+			-webkit-touch-callout: none;
+	    -webkit-user-select: none;
+	    -khtml-user-select: none;
+	    -moz-user-select: none;
+	    -ms-user-select: none;
+	    user-select: none;
+		}
+		#logo{
+			cursor:pointer;
+		}
+		.crsr{
+			cursor:pointer;
+			-webkit-touch-callout: none;
+	    -webkit-user-select: none;
+	    -khtml-user-select: none;
+	    -moz-user-select: none;
+	    -ms-user-select: none;
+	    user-select: none;
+		}
+	</style>
+
 <div class="wrapper">
     <div class="sidebar" data-background-color="white" data-active-color="success">
 
-    <!--
-		Tip 1: you can change the color of the sidebar's background using: data-background-color="white | black"
-		Tip 2: you can change the color of the active button using the data-active-color="primary | info | success | warning | danger"
-	-->
 
     	<div class="sidebar-wrapper">
-            <div class="logo">
-                <a href="" class="simple-text">
+            <div class="logo" id="logo" onclick="getCntnt('Dashboard');">
+                <a class="simple-text">
                     <img  src="assets/img/inc-logo.png" alt="..."/>
                 </a>
             </div>
 
             <ul class="nav">
 
-                <li class="active">
-                    <a href="dashboard.html">
+                <li class="active linkBtn" id="Dashboard" onclick="getCntnt('Dashboard');">
+                    <a >
                         <i class="ti-dashboard"></i>
                         <p>Dashboard</p>
                     </a>
                 </li>
-                <li class="">
-                    <a href="Matiere.html">
+                <li class="linkBtn" id="Matiere" onclick="getCntnt('Matiere');">
+                    <a >
                         <i class="ti-bookmark-alt"></i>
                         <p>Matiéres</p>
                     </a>
                 </li>
 
-                    <li class="">
-                        <a href="Encadrants.html">
+                    <li class="linkBtn" id="Encadrants" onclick="getCntnt('Encadrants');">
+                        <a >
                             <i class="ti-briefcase"></i>
                             <p>Les encadrants</p>
                         </a>
                     </li>
 
-                <li class="">
-                    <a href="Filiere.html">
+                <li class="linkBtn" id="Filiere" onclick="getCntnt('Filiere');">
+                    <a >
                         <i class="ti-folder"></i>
                         <p>Filières </p>
                     </a>
                 </li>
 
-                <li class="">
-                    <a href="Groupe.html">
+                <li class="linkBtn" id="Groupe" onclick="getCntnt('Groupe');">
+                    <a >
                         <i class="ti-bookmark"></i>
                         <p>Groupes</p>
                     </a>
                 </li>
-                <li class="">
-                    <a href="Stagiaires.html">
+                <li class="linkBtn" id="Stagiaires" onclick="getCntnt('Stagiaires');">
+                    <a >
                         <i class="ti-face-smile"></i>
                         <p>Stagiaires</p>
                     </a>
                 </li>
-                <li class="">
-                    <a href="EmploiDuTemps.html">
+                <li class="linkBtn" id="EmploiDuTemps" onclick="getCntnt('EmploiDuTemps');">
+                    <a >
                         <i class="ti-time"></i>
                         <p>Emploi du temps</p>
                     </a>
                 </li>
-                <li class="">
-                    <a href="AbsencesRetards.html">
+                <li class="linkBtn" id="AbsencesRetards" onclick="getCntnt('AbsencesRetards');">
+                    <a >
                         <i class="ti-thumb-down"></i>
                         <p>Abcences et retard</p>
                     </a>
                 </li>
 
-                <li class="">
-                    <a href="Administration.html">
+                <li class="linkBtn" id="Administration" onclick="getCntnt('Administration');">
+                    <a >
                         <i class="ti-crown"></i>
                         <p>Administration</p>
                     </a>
@@ -126,19 +146,19 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Dashboard</a>
+                    <a class="navbar-brand" href="#"  id="ttl"></a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right crsr">
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown">
                                   <i class="ti-user"></i>
                                   <p>Mr.Redouane Ramiz</p>
                                   <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                              <li><a href="MonProfil.html">Modifier Mon Profile</a></li>
-                              <li><a href="index.html">Déconnexion</a></li>
+                              <li><a class="crsr"  onclick="getCntnt('Mon Profile');">Modifier Mon Profile</a></li>
+                              <li><a class="crsr" >Déconnexion</a></li>
                             </ul>
                       </li>
                     </ul>
@@ -147,7 +167,10 @@
         </nav>
 
 
-        <div class="content" id="content"></div>
+        <div class="content" id="cntnt">
+
+
+				</div>
 
 
 
@@ -195,7 +218,8 @@
 	<script src="assets/js/paper-dashboard.js"></script>
 
 	<!-- Paper Dashboard DEMO methods, don't include it in your project! -->
-	<script src="assets/js/demo.js"></script>
+  <script src="assets/js/demo.js"></script>
+	<script src="links.js"></script>
 
 	<script type="text/javascript">
     	$(document).ready(function(){
@@ -212,6 +236,26 @@
             });
 
     	});
+
+
+	document.addEventListener("contextmenu", (e)=>{e.preventDefault();}, false);
+  document.onkeydown = function(e) {
+  if(event.keyCode == 123) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+     return false;
+  }
+  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+     return false;
+  }
+}
 	</script>
 
 </html>
