--- a/new/assets/pgs/Filiere.html
+++ b/new/assets/pgs/Filiere.html
@@ -1,225 +1,207 @@
 <div class="container-fluid">
-		<!--Début Tableau--->
- <div class="row">
-		<div class="col-md-12">
-				<div class="card">
-						<div class="header">
-								<h4 class="title">Ajouter des Filières </h4>
-						</div>
-						<hr/>
-						<div class="row">
-						<div class="header">
-								<form>
-								<div class="col-lg-8 col-sm-12">
-										<label>Nom Filière</label>
-									 <input  name="NomFiliere" Id="NomFiliere" type="text" class="form-control border-input" value="">
-								</div>
-								<div class="col-lg-4 col-sm-12">
-										<label>Nombre des heures </label>
-										<input  name="NBRH" Id="NBRH" type="number" class="form-control border-input" value="">
-								</div>
-								<br>
-								<div class="row">
-										<div class="text-center">
-												<button type="submit" class="btn btn-success btn-fill btn-wd">Ajouter/Modifier</button>
-										</div>
-								 </div>
-						</form>
-						</div>
-				</div>
-						<hr/>
-						<div class="content table-responsive table-full-width">
-								<div class="header">
-										<h4 class="title">Liste des Filières </h4>
-								</div>
-								<hr/>
-								<table class="table table-striped">
-										<thead>
-												<th>Nom Filière</th>
-												<th>Nombre des heures</th>
-												<th>Nombre desMatiéres</th>
-												<th>Matiéres</th>
-												<th>Modifier</th>
-												<th>Supprimer</th>
-										</thead>
-										<tbody>
-												<tr>
-														<td>Équitation</td>
-														<td>44</td>
-														<td>5</td>
-														<td><button type="submit" class="btn btn-info btn-fill btn-wd"> Gérer les Matiéres</button></td>
-														<td><button type="submit" class="btn btn-warning btn-fill btn-wd">Modifier</button></td>
-														<td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
+                <!--Début Tableau--->
+             <div class="row">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="header">
+                            <h4 class="title"> Filières </h4>
+                        </div>
+                        <hr/>
+                        <div class="row">
+                        <div class="header">
+                            <form>
+                            <div class="col-lg-8 col-sm-12">
+                                <label>Nom Filière</label>
+                               <input  name="NomFiliere" Id="NomFiliere" type="text" class="form-control border-input" value="">
+                            </div>
+                            <br>
+                            <div class="row">
+                                <div class="text-center">
+                                    <button type="submit" class="btn btn-success btn-fill btn-wd">Ajouter/Modifier</button>
+                                </div>
+                             </div>
+                        </form>
+                        </div>
+                    </div>
+                        <hr/>
+                        <div class="content table-responsive table-full-width">
+                            <div class="header">
+                                <h4 class="title">Liste des Filières </h4>
+                            </div>
+                            <hr/>
+                            <table class="table table-striped">
+                                <thead>
+                                    <th>Nom Filière</th>
+                                    <th>Modifier</th>
+                                    <th>Supprimer</th>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Équitation</td>
+                                        <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Modifier</button></td>
+                                        <td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
 
-												</tr>
+                                    </tr>
 
-												<tr>
-														<td>Nutrition des cheveux</td>
-														<td>180</td>
-														<td>4</td>
-														<td><button type="submit" class="btn btn-info btn-fill btn-wd"> Gérer les Matiéres</button></td>
-														<td><button type="submit" class="btn btn-warning btn-fill btn-wd">Modifier</button></td>
-														<td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
-												</tr>
-										</tbody>
-								</table>
-						</div>
-				</div>
-		</div>
-		</div>
- <!--FIN Tableau--->
+                                    <tr>
+                                        <td>Nutrition des cheveux</td>
+                                        <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Modifier</button></td>
+                                        <td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                </div>
+             <!--FIN Tableau--->
 
- <div class="content">
-		<div class="container-fluid">
-				<div class="row">
-						<div class="col-lg-6 col-sm-6">
-								<div class="card">
+             <!--<div class="content">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6">
+                            <div class="card">
 
-										<div class="content">
+                                <div class="content">
 
-												<div class="content table-responsive table-full-width">
-														<div class="header">
-																<h4 class="title">Liste des Matiérers Non affectés a la Filière : Équitation</h4>
-														</div>
-														<hr/>
-														<table class="table table-striped">
-																<thead>
-																		<th>Matiérer</th>
-																		<th>Associer</th>
-																</thead>
-																<tbody>
-																		<tr>
-																				<td>Matiérer-2</td>
-																				<td><button type="submit" class="btn btn-success btn-fill btn-wd">Associer >></button></td>
-																		</tr>
-																		<tr>
-																				<td>Matiérer-3</td>
-																				<td><button type="submit" class="btn btn-success btn-fill btn-wd">Associer >></button></td>
-																		</tr>
-																		<tr>
-																				<td>Matiérer-4</td>
-																				<td><button type="submit" class="btn btn-success btn-fill btn-wd">Associer >></button></td>
-																		</tr>
-																</tbody>
-														</table>
-												</div>
-												<div class="footer">
-														<hr />
-														<div class="stats">
-																<i class="ti-plus"></i>Liste des Matiérers disponible
-														</div>
-												</div>
-										</div>
-								</div>
-						</div>
+                                    <div class="content table-responsive table-full-width">
+                                        <div class="header">
+                                            <h4 class="title">Liste des Matiérers Non affectés a la Filière : Équitation</h4>
+                                        </div>
+                                        <hr/>
+                                        <table class="table table-striped">
+                                            <thead>
+                                                <th>Matiérer</th>
+                                                <th>Associer</th>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Matiérer-2</td>
+                                                    <td><button type="submit" class="btn btn-success btn-fill btn-wd">Associer >></button></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Matiérer-3</td>
+                                                    <td><button type="submit" class="btn btn-success btn-fill btn-wd">Associer >></button></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Matiérer-4</td>
+                                                    <td><button type="submit" class="btn btn-success btn-fill btn-wd">Associer >></button></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="footer">
+                                        <hr />
+                                        <div class="stats">
+                                            <i class="ti-plus"></i>Liste des Matiérers disponible
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-						<div class="col-lg-6 col-sm-6">
-								<div class="card">
-										<div class="content">
-												<div class="content table-responsive table-full-width">
+                        <div class="col-lg-6 col-sm-6">
+                            <div class="card">
+                                <div class="content">
+                                    <div class="content table-responsive table-full-width">
 
-														<div class="header">
-																<h4 class="title">Liste des Matiérers déja affectés a la Filière : Équitation</h4>
-														</div>
-														<hr/>
+                                        <div class="header">
+                                            <h4 class="title">Liste des Matiérers déja affectés a la Filière : Équitation</h4>
+                                        </div>
+                                        <hr/>
 
-														<table class="table table-striped">
-																<thead>
-																		<th>Matiérer</th>
-																		<th>Dissocier</th>
-																</thead>
-																<tbody>
-																		<tr>
-																				<td>Matiérer-1</td>
-																				<td><button type="submit" class="btn btn-warning btn-fill btn-wd"> << Dissocier</button></td>
-																		</tr>
-																</tbody>
-														</table>
-												</div>
-												<div class="footer">
-														<hr />
-														<div class="stats">
-																<i class="ti-bookmark"></i>Liste des Matiérers déja affectés a la Filière
-														</div>
-												</div>
-										</div>
-								</div>
-						</div>
-				</div>
+                                        <table class="table table-striped">
+                                            <thead>
+                                                <th>Matiérer</th>
+                                                <th>Dissocier</th>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Matiérer-1</td>
+                                                    <td><button type="submit" class="btn btn-warning btn-fill btn-wd"> << Dissocier</button></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="footer">
+                                        <hr />
+                                        <div class="stats">
+                                            <i class="ti-bookmark"></i>Liste des Matiérers déja affectés a la Filière
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
 
-		 <!--Début Tableau
-		 <div class="row">
-				<div class="col-md-12">
-						<div class="card">
+                 Début Tableau
+                 <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
 
-										<br>
-								<div class="content table-responsive table-full-width">
+                                <br>
+                            <div class="content table-responsive table-full-width">
 
-										<table class="table table-striped">
-												<thead>
-														<th>Nom Prénom</th>
-														<th>Filière</th>
-														<th>Groupe</th>
-														<th>Séance</th>
-														<th>État</th>
-														<th>Signalé Par</th>
-														<th>Billet</th>
-														<th>Stagiaire</th>
-												</thead>
-												<tbody>
-														<tr>
-																<td>BOURIR Karim</td>
-																<td>Équitation</td>
-																<td>A</td>
-																<td>08:30-11:30</td>
-																<td>Absence</td>
-																<td>Mohamed MOHAMED</td>
-																<td><button type="submit" class="btn btn-success">Billet</button></td>
-																<td><button type="submit" class="btn btn-info">Détails</button></td>
+                                <table class="table table-striped">
+                                    <thead>
+                                        <th>Nom Prénom</th>
+                                        <th>Filière</th>
+                                        <th>Groupe</th>
+                                        <th>Séance</th>
+                                        <th>État</th>
+                                        <th>Signalé Par</th>
+                                        <th>Billet</th>
+                                        <th>Stagiaire</th>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>BOURIR Karim</td>
+                                            <td>Équitation</td>
+                                            <td>A</td>
+                                            <td>08:30-11:30</td>
+                                            <td>Absence</td>
+                                            <td>Mohamed MOHAMED</td>
+                                            <td><button type="submit" class="btn btn-success">Billet</button></td>
+                                            <td><button type="submit" class="btn btn-info">Détails</button></td>
 
-														</tr>
+                                        </tr>
 
-														<tr>
-																<td>Faris Bensoussa</td>
-																<td>Nutrition des cheveux</td>
-																<td>A</td>
-																<td>08:30-11:30</td>
-																<td>Retard</td>
-																<td>Soumia SNOUSSI</td>
-																<td><button type="submit" class="btn btn-success">Billet</button></td>
-																<td><button type="submit" class="btn btn-info">Détails</button></td>
+                                        <tr>
+                                            <td>Faris Bensoussa</td>
+                                            <td>Nutrition des cheveux</td>
+                                            <td>A</td>
+                                            <td>08:30-11:30</td>
+                                            <td>Retard</td>
+                                            <td>Soumia SNOUSSI</td>
+                                            <td><button type="submit" class="btn btn-success">Billet</button></td>
+                                            <td><button type="submit" class="btn btn-info">Détails</button></td>
 
-														</tr>
-														<tr>
-																<td>Najat Darouche</td>
-																<td>Équitation</td>
-																<td>D</td>
-																<td>11:30-13:30</td>
-																<td>Absence</td>
-																<td>Abdelatif NADIF</td>
-																<td><button type="submit" class="btn btn-success">Billet</button></td>
-																<td><button type="submit" class="btn btn-info">Détails</button></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Najat Darouche</td>
+                                            <td>Équitation</td>
+                                            <td>D</td>
+                                            <td>11:30-13:30</td>
+                                            <td>Absence</td>
+                                            <td>Abdelatif NADIF</td>
+                                            <td><button type="submit" class="btn btn-success">Billet</button></td>
+                                            <td><button type="submit" class="btn btn-info">Détails</button></td>
 
-														</tr>
-
-
-												</tbody>
-										</table>
-
-								</div>
-						</div>
-				</div>
+                                        </tr>
 
 
-				</div>--->
-		 <!--FIN Tableau--->
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    </div>--->
+                 <!--FIN Tableau--->
 
 
 
-</div>
-</div>
-
-
-
-</div>
+            </div>
