--- a/new/index.html
+++ b/new/index.html
@@ -77,12 +77,12 @@
                         <p>Dashboard</p>
                     </a>
                 </li>
-                <li class="linkBtn" id="Matiere" onclick="getCntnt('Matiere');">
+                <!-- <li class="linkBtn" id="Matiere" onclick="getCntnt('Matiere');">
                     <a >
                         <i class="ti-bookmark-alt"></i>
                         <p>Matiéres</p>
                     </a>
-                </li>
+                </li> -->
 
                     <li class="linkBtn" id="Encadrants" onclick="getCntnt('Encadrants');">
                         <a >
